--- a/css/style.css
+++ b/css/style.css
@@ -213,4 +213,40 @@ h4{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
+}
+
+.teams{
+    margin: 10px;
+    padding: 22px;
+    max-width: 30%;
+    cursor: pointer;
+    transition: 0,4s;
+    box-sizing: border-box;
+}
+
+.teams:hover{
+    background-color: darkcyan;
+    border-radius: 12px;
+}
+
+.teams img{
+    widows: 200px;
+    height: 200px;
+}
+
+.name{
+    padding: 12px;
+    font-weight: bold;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.jobs{
+    font-style: italic;
+}
+
+.about{
+    margin: 20px 0;
+    font-weight: lighter;
 }
