--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ body{
     background-color: rgb(204, 250, 235);
 }
 
+/*startsidan*/
 .head{
-    width: 100%;
+    width:100%;
     margin: auto;
 }
 
@@ -23,6 +24,19 @@ body{
     align-items: center;
 }
 
+.li{
+    flex: 1;
+    text-align: right;
+    margin-right: 95px;
+}
+
+.link{
+    padding: 0 40px;
+    font-size: 1.15rem;
+    font-family: 'Special Elite', cursive;
+    color:  rgb(8, 104, 72);
+}
+/*Our animals*/
 .h1{
     margin: 10px;
     font-family: 'Rubik Vinyl', cursive;
@@ -30,29 +44,17 @@ body{
     font-size: 3.5rem;
 }
 
-.li{
-    flex: 1;
-    text-align: right;
-    margin: auto;
-}
-
-.link{
-    padding: 0 50px;
-    font-size: 1.125rem;
-    font-family: 'Special Elite', cursive;
-    color:  rgb(8, 104, 72);
-}
 
 .poster{
     display: flex;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 50px;
+    margin: 10px 20px 0 10px;
 }
+
+
 
 .left-column, .right-column{
     flex-basis: 50%;
-    padding: 10px;
+    padding-right: 40px;
 }
 
 .right-column img{
@@ -82,11 +84,11 @@ h3{
     color:  rgb(104, 210, 175);;
 }
 
+/*öppettider box*/
 .opening-hours{
     background:  rgb(9, 63, 45);
     font-size: 1rem;
     font-family: 'Courier New', Courier, monospace;
-    border: solid;
     margin-top: 5px;
     margin-left: 50px;
     padding: 5px;
