--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,12 @@ body{
 }
 
 /*startsidan*/
+/*
 .head{
     width:100%;
     margin: auto;
 }
+*/
 
 .navbar{
     margin: 5px;
@@ -36,8 +38,8 @@ body{
     font-family: 'Special Elite', cursive;
     color:  rgb(8, 104, 72);
 }
-/*Our animals*/
-.h1{
+/*Zookery*/
+h1{
     margin: 10px;
     font-family: 'Rubik Vinyl', cursive;
     color: rgb(13, 120, 84);
